add link to Persons/Persons

--- a/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -24,6 +24,7 @@
             <div class="icon">
                 <i class="fa fa-users"></i>
             </div>
+            <a href="~/Persons/Persons" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
     </div>
 </div>
