--- a/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -27,5 +27,17 @@
             <a href="~/Persons/Persons" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
     </div>
+    <div class="col-lg-3 col-sm-6">
+        <div class="card s-dashboard-card-sm">
+            <div class="card-body">
+                <h3>@Model.PersonsCount</h3>
+                <p>Total de Personas</p>
+            </div>
+            <div class="icon">
+                <i class="fa fa-users"></i>
+            </div>
+            <a href="~/Persons/Persons?genreFilter=1" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+    </div>
 </div>
 
