dashbord male and female

--- a/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -27,5 +27,28 @@
             <a href="~/Persons/Persons" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
     </div>
+	<div class="col-lg-3 col-sm-6">
+		<div class="card s-dashboard-card-sm">
+			<div class="card-body">
+				<h3>@Model.FemaleCount</h3>
+				<p>Total de Mujeres</p>
+			</div>
+			<div class="icon">
+				<i class="fa fa-users"></i>
+			</div>
+			<a href="~/Persons/Persons?FilterGender=2" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+		</div>
+	</div>
+		<div class="col-lg-3 col-sm-6">
+			<div class="card s-dashboard-card-sm">
+				<div class="card-body">
+					<h3>@Model.MaleCount</h3>
+					<p>Total de Varones</p>
+				</div>
+				<div class="icon">
+					<i class="fa fa-users"></i>
+				</div>
+			<a href="~/Persons/Persons?FilterGender=1" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+			</div>
 </div>
 
