Add dashboard filter gender

--- a/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Puntonet/Puntonet.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -36,7 +36,7 @@
 			<div class="icon">
 				<i class="fa fa-users"></i>
 			</div>
-			<a href="~/Persons/Persons?FilterGender=2" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+			<a href="~/Persons/Persons?genreFilter=2" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
 		</div>
 	</div>
 		<div class="col-lg-3 col-sm-6">
@@ -48,7 +48,7 @@
 				<div class="icon">
 					<i class="fa fa-users"></i>
 				</div>
-			<a href="~/Persons/Persons?FilterGender=1" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+			<a href="~/Persons/Persons?genreFilter=1" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
 			</div>
 </div>
 
